Documentation and packages requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,4 @@
-# run $ pip3 install -r requirements.txt
-
-asn1crypto
-bcrypt
-cffi
-cryptography
-cyvcf2
-cycler
-fabric
-img2pdf
-jupyter
-kiwisolver
-matplotlib
-numpy
-pandas
-paramiko
-pathlib
-pycparser
-pyparsing
+pandas >= 1.10
 pysam
-pytz
-scikit-learn
-scipy
-setuptools
-
-# /home/camille/PycharmProjects/lib/persotools
+numpy
+seaborn
